update casbin init
